[package]
name = "wrdl"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
indicatif = { version = "0.17.8", features = ["rayon"] }
itertools = "0.13.0"
ratatui = "0.27"
rayon = "1.10.0"
tokio = { version = "1.38.0", features = ["macros", "rt", "time"] }
tokio-util = "0.7.11"

[lints.rust]
unsafe_code = "forbid"
explicit_outlives_requirements = "forbid"
let_underscore_drop = "warn"
non_ascii_idents = "forbid"
single_use_lifetimes = "warn"
unit_bindings = "warn"
unused_crate_dependencies = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"
